tests/compile/with_invalid_span_args.stderr
error[E0425]: cannot find value `local` in this scope
 --> $DIR/with_invalid_span_args.rs:3:5
  |
3 |     /// SPANDOC: Show me the money {?local}
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
