tests/compile/with_invalid_span_args.rs
#[spandoc::spandoc]
fn main() {
    /// SPANDOC: Show me the money {?local}
    let _ = 4;
}
